--- a/tim.html
+++ b/tim.html
@@ -18,7 +18,7 @@
 
 
     <section id="bio">
-        <h1>Hi!</h1>
+        <h1>BYE!</h1>
         <div class="line"></div>
         <p>Tim Berners-Lee is a software engineer who invented the Internet (or the World Wide Web) in 1989 while at CERN, the European Particle Physics Laboratory.
 
